--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,6 +15,7 @@
     {{- end }}
 
     <span>
+      <img src="https://count.getloli.com/@joey5403.blog?name=joey5403.blog&theme=sketch-2&padding=7&offset=0&align=top&scale=1&pixelated=1&darkmode=auto">
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
         <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
